2018.2/_sources/plugins/available/emperor/plot.txt
plot: Visualize and Interact with Principal Coordinates Analysis Plots
======================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime emperor plot [OPTIONS]

     Generate visualization of your ordination.

   Options:
     --i-pcoa ARTIFACT PATH PCoAResults
                                     The principal coordinates matrix to be
                                     plotted.  [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. The sample
                                     metadata.  [required]
     --p-custom-axes MULTIPLE TEXT   Numeric sample metadata columns that should
                                     be included as axes in the Emperor plot.
                                     [optional]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Visualize and Interact with Principal Coordinates Analysis Plots

   Generate visualization of your ordination.

   Parameters
   ----------
   pcoa : PCoAResults
       The principal coordinates matrix to be plotted.
   metadata : Metadata
       The sample metadata.
   custom_axes : List[Str], optional
       Numeric sample metadata columns that should be included as axes in the
       Emperor plot.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>